--- a/PlanMate/PlanMate/Info.plist
+++ b/PlanMate/PlanMate/Info.plist
@@ -2,7 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This app needs your location to show nearby places.</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.569660158198-1sq4equ1flbto972dtevcg5boj2h5ho6</string>
+			</array>
+		</dict>
+		<dict/>
+	</array>
 </dict>
 </plist>
