notification function updated to background running

--- a/PlanMate/PlanMate/Info.plist
+++ b/PlanMate/PlanMate/Info.plist
@@ -16,5 +16,11 @@
 	</array>
 	<key>NSCalendarsFullAccessUsageDescription</key>
 	<string>This app needs full access to your calendar to add and manage activity events</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>processing</string>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
